# speculoos

derive/: Cargo.toml
derive/src/: lib.rs
src/: lib.rs  numeric.rs  vec.rs
tests/: derive.rs
