[package]
name = "speculoos-derive"
version = "0.10.0"
edition = "2021"
authors = [
    "Grégoire Geis <opensource@gregoirege.is>",
]
license = "Apache-2.0"
description = "Fluent test assertions"
repository = "https://github.com/71/speculoos"
readme = "README.md"
keywords = ["fluent", "testing", "matchers", "assert", "assertions"]

[lib]
proc-macro = true

[dependencies]
ident_case = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["derive"] }
